<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.restconmobile.ui.comanda.ComandaFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_comanda" />

    <fragment
        android:id="@+id/navigation_mancare"
        android:name="com.example.restconmobile.ui.mancare.MancareFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_mancare" />

    <fragment
        android:id="@+id/navigation_bautura"
        android:name="com.example.restconmobile.ui.bautura.BauturaFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_bautura" />
</navigation>